tests/paczka1/small_fuzzy/14082378.err
Error in line 3: kKWCJSlDGj6 S224 65,9
Error in line 6: mDR1Oa S224 83,4
Error in line 9: A506 A886 98,5
